<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4022.12">
  <DUT Name="ST_HRErrHist" Id="{588053fa-53c2-4900-bc4d-5dc584b6ee9d}">
    <Declaration><![CDATA[TYPE ST_HRErrHist :
STRUCT
{attribute 'displaymode':='hex'}
	hrErrCode	: HRESULT;
	sErrSource	: STRING(63);
	nErrCount	: UDINT;
END_STRUCT
END_TYPE
]]></Declaration>
  </DUT>
</TcPlcObject>